[gd_scene load_steps=66 format=2]

[ext_resource path="res://assets/Characters/Player - basic/basic_jump_08.png" type="Texture" id=1]
[ext_resource path="res://assets/Characters/Player - basic/basic_jump_07.png" type="Texture" id=2]
[ext_resource path="res://scripts/Player/Player.gd" type="Script" id=3]
[ext_resource path="res://assets/Characters/Player - basic/basic_jump_06.png" type="Texture" id=4]
[ext_resource path="res://assets/Characters/Player - basic/basic_jump_05.png" type="Texture" id=5]
[ext_resource path="res://assets/Characters/Player - basic/basic_jump_04.png" type="Texture" id=6]
[ext_resource path="res://assets/Characters/Player - basic/basic_jump_03.png" type="Texture" id=7]
[ext_resource path="res://assets/Characters/Player - basic/basic_jump_02.png" type="Texture" id=8]
[ext_resource path="res://assets/Characters/Player - basic/basic_jump_01.png" type="Texture" id=9]
[ext_resource path="res://assets/Characters/Player - basic/basic_idle_04.png" type="Texture" id=10]
[ext_resource path="res://assets/Characters/Player - basic/basic_idle_03.png" type="Texture" id=11]
[ext_resource path="res://assets/Characters/Player - basic/basic_idle_02.png" type="Texture" id=12]
[ext_resource path="res://assets/Characters/Player - basic/basic_idle_01.png" type="Texture" id=13]
[ext_resource path="res://assets/Characters/Player - basic/basic_jump_09.png" type="Texture" id=14]
[ext_resource path="res://assets/Characters/Player - basic/basic_run_01.png" type="Texture" id=15]
[ext_resource path="res://assets/Characters/Player - basic/basic_run_02.png" type="Texture" id=16]
[ext_resource path="res://assets/Characters/Player - basic/basic_run_03.png" type="Texture" id=17]
[ext_resource path="res://assets/Characters/Player - basic/basic_run_04.png" type="Texture" id=18]
[ext_resource path="res://assets/Characters/Player - basic/basic_run_05.png" type="Texture" id=19]
[ext_resource path="res://assets/Characters/Player - basic/basic_run_06.png" type="Texture" id=20]
[ext_resource path="res://assets/Characters/Player - basic/basic_run_07.png" type="Texture" id=21]
[ext_resource path="res://assets/Characters/Player - basic/basic_run_08.png" type="Texture" id=22]
[ext_resource path="res://assets/Characters/Player - basic/Gun/gun.png" type="Texture" id=23]
[ext_resource path="res://barrier.png" type="Texture" id=24]
[ext_resource path="res://scenes/Effects/DeathParticles.tscn" type="PackedScene" id=25]
[ext_resource path="res://scenes/Effects/Extase.tscn" type="PackedScene" id=26]
[ext_resource path="res://assets/Characters/Player - basic/Death/portal_01.png" type="Texture" id=27]
[ext_resource path="res://assets/Characters/Player - basic/Death/portal_02.png" type="Texture" id=28]
[ext_resource path="res://assets/Characters/Player - basic/Death/portal_03.png" type="Texture" id=29]
[ext_resource path="res://assets/Characters/Player - basic/Death/portal_04.png" type="Texture" id=30]
[ext_resource path="res://assets/Characters/Player - basic/Death/portal_05.png" type="Texture" id=31]
[ext_resource path="res://assets/Characters/Player - basic/Death/portal_06.png" type="Texture" id=32]
[ext_resource path="res://assets/Projectiles/PlayerProjectiles/missile.png" type="Texture" id=33]
[ext_resource path="res://TestHUD2.png" type="Texture" id=34]
[ext_resource path="res://TestHUD.png" type="Texture" id=35]
[ext_resource path="res://PlaceHolderVida.png" type="Texture" id=36]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ) ],
"loop": true,
"name": "Death",
"speed": 15.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 13 ), ExtResource( 12 ), ExtResource( 11 ), ExtResource( 10 ) ],
"loop": true,
"name": "idle",
"speed": 10.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 4 ), ExtResource( 2 ), ExtResource( 1 ), ExtResource( 14 ) ],
"loop": false,
"name": "fall",
"speed": 10.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ) ],
"loop": true,
"name": "run",
"speed": 10.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 5 ) ],
"loop": false,
"name": "jump",
"speed": 8.0
} ]

[sub_resource type="Animation" id=3]
resource_name = "Damage"
length = 1.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.956863, 0.0196078, 0.0196078, 0.313726 ), Color( 0.898039, 0.117647, 0.117647, 1 ), Color( 0.956863, 0.0196078, 0.0196078, 0.313726 ), Color( 0.898039, 0.117647, 0.117647, 1 ), Color( 0.956863, 0.0196078, 0.0196078, 0.313726 ), Color( 0.898039, 0.117647, 0.117647, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="CapsuleShape2D" id=4]
radius = 2.85
height = 3.2

[sub_resource type="CanvasItemMaterial" id=5]
blend_mode = 1
light_mode = 1

[sub_resource type="Gradient" id=6]
offsets = PoolRealArray( 0, 0.283333, 0.62, 0.866197, 1 )
colors = PoolColorArray( 0.980469, 0.963354, 0.781311, 1, 0.972109, 0.95952, 0.166422, 1, 0.9375, 0.480452, 0.113525, 1, 0.816406, 0.0574036, 0.0574036, 1, 1, 0.0156863, 0.0156863, 0 )

[sub_resource type="GradientTexture" id=7]
gradient = SubResource( 6 )

[sub_resource type="Curve" id=8]
min_value = -400.0
max_value = 500.0
_data = [ Vector2( 0, 400 ), 0.0, 6851.52, 0, 0, Vector2( 0.188854, 12.7273 ), -1419.24, -1419.24, 0, 0, Vector2( 1, -107.273 ), 1227.08, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=9]
curve = SubResource( 8 )

[sub_resource type="Curve" id=10]
min_value = 1.0
max_value = 2.5
_data = [ Vector2( 0, 2.11818 ), 0.0, 0.0, 0, 0, Vector2( 1, 1.19091 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=11]
curve = SubResource( 10 )

[sub_resource type="ParticlesMaterial" id=12]
lifetime_randomness = 1.0
emission_shape = 1
emission_sphere_radius = 2.0
flag_disable_z = true
spread = 105.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 100.0
initial_velocity_random = 0.5
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 100.0
linear_accel_random = 0.2
linear_accel_curve = SubResource( 9 )
scale_random = 1.0
scale_curve = SubResource( 11 )
color_ramp = SubResource( 7 )

[sub_resource type="CanvasItemMaterial" id=13]
light_mode = 1

[sub_resource type="GradientTexture" id=14]
gradient = SubResource( 6 )

[sub_resource type="Curve" id=15]
max_value = 300.0
_data = [ Vector2( 0, 223.636 ), 0.0, 6313.18, 0, 0, Vector2( 0.176471, 0 ), -25105.9, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=16]
curve = SubResource( 15 )

[sub_resource type="Curve" id=17]
max_value = 4.0
_data = [ Vector2( 0, 1.81818 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.363636 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=18]
curve = SubResource( 17 )

[sub_resource type="ParticlesMaterial" id=19]
emission_shape = 1
emission_sphere_radius = 1.0
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 140, 0 )
initial_velocity = 100.0
initial_velocity_random = 0.3
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 100.0
linear_accel_random = 0.4
linear_accel_curve = SubResource( 16 )
scale = 2.0
scale_random = 1.0
scale_curve = SubResource( 18 )
color_ramp = SubResource( 14 )

[sub_resource type="CanvasItemMaterial" id=20]
light_mode = 1

[sub_resource type="Gradient" id=21]
offsets = PoolRealArray( 0.123333, 0.923333, 1 )
colors = PoolColorArray( 0.270588, 0.270588, 0.270588, 0.721569, 0.501961, 0.501961, 0.501961, 0.168627, 0.886275, 0.886275, 0.886275, 0 )

[sub_resource type="GradientTexture" id=22]
gradient = SubResource( 21 )

[sub_resource type="Curve" id=23]
min_value = -200.0
max_value = 200.0
_data = [ Vector2( 0, 200 ), 0.0, 4969.23, 0, 0, Vector2( 0.182663, -127.273 ), -4306.66, 0.0, 0, 1, Vector2( 1, -127.273 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=24]
curve = SubResource( 23 )

[sub_resource type="Curve" id=25]
min_value = 0.99
max_value = 5.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 1.93782 ), 5.75658, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=26]
curve = SubResource( 25 )

[sub_resource type="ParticlesMaterial" id=27]
lifetime_randomness = 1.0
emission_shape = 1
emission_sphere_radius = 2.0
flag_disable_z = true
spread = 110.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 80.0
initial_velocity_random = 0.5
orbit_velocity = 0.15
orbit_velocity_random = 1.0
linear_accel = 100.0
linear_accel_random = 0.5
linear_accel_curve = SubResource( 24 )
scale_random = 1.0
scale_curve = SubResource( 26 )
color_ramp = SubResource( 22 )

[sub_resource type="CanvasItemMaterial" id=28]
light_mode = 1

[sub_resource type="ParticlesMaterial" id=29]
lifetime_randomness = 1.0
emission_shape = 1
emission_sphere_radius = 2.0
flag_disable_z = true
spread = 110.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 80.0
initial_velocity_random = 0.5
orbit_velocity = 0.15
orbit_velocity_random = 1.0
linear_accel = 100.0
linear_accel_random = 0.5
linear_accel_curve = SubResource( 24 )
scale_random = 1.0
scale_curve = SubResource( 26 )
color_ramp = SubResource( 22 )

[node name="Player" type="KinematicBody2D" groups=[
"Player",
"Target",
]]
collision_layer = 3
collision_mask = 3
collision/safe_margin = 0.01
script = ExtResource( 3 )

[node name="DeathPortal" type="AnimatedSprite" parent="."]
visible = false
scale = Vector2( 2.5, 2.5 )
z_index = -1
frames = SubResource( 1 )
animation = "Death"
frame = 2
playing = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "fall"
frame = 4
playing = true
__meta__ = {
"_editor_description_": ""
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimatedSprite"]
anims/Damage = SubResource( 3 )

[node name="CollisionPlayer" type="CollisionShape2D" parent="."]
position = Vector2( 0, 0.537964 )
shape = SubResource( 4 )

[node name="Gun" type="Sprite" parent="."]
position = Vector2( 0, 1 )
texture = ExtResource( 23 )

[node name="Position2D" type="Position2D" parent="Gun"]
position = Vector2( 7.7779, -0.149576 )

[node name="Shield" type="StaticBody2D" parent="." groups=[
"Shield",
"Target",
]]
position = Vector2( 10.636, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Shield"]
visible = false
rotation = 1.5708
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 24 )

[node name="Light2D" type="Light2D" parent="Shield/Sprite"]
texture = ExtResource( 24 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Shield"]
polygon = PoolVector2Array( -2.3996, -8.69725, -0.00557804, -2.69136, -0.00496769, 2.95575, -2.39961, 8.68623, -2.39961, 9.6022, -1.21301, 9.61186, 1.22266, 3.00226, 1.22266, -3.29507, -1.19218, -9.59241, -2.3892, -9.59241 )
disabled = true

[node name="RegenShield" type="Timer" parent="Shield"]
wait_time = 5.0
autostart = true

[node name="ShieldExplosion" type="Node2D" parent="Shield"]
position = Vector2( -10.636, 0 )

[node name="Particles2D1" type="Particles2D" parent="Shield/ShieldExplosion"]
material = SubResource( 5 )
scale = Vector2( 0.1, 0.1 )
emitting = false
amount = 250
lifetime = 0.8
one_shot = true
speed_scale = 1.5
explosiveness = 0.9
local_coords = false
process_material = SubResource( 12 )
__meta__ = {
"_editor_description_": ""
}

[node name="Particles2D2" type="Particles2D" parent="Shield/ShieldExplosion"]
material = SubResource( 13 )
scale = Vector2( 0.1, 0.1 )
emitting = false
amount = 15
lifetime = 0.6
one_shot = true
speed_scale = 1.5
explosiveness = 1.0
local_coords = false
process_material = SubResource( 19 )
__meta__ = {
"_editor_description_": ""
}

[node name="Particles2D3" type="Particles2D" parent="Shield/ShieldExplosion"]
self_modulate = Color( 1, 1, 1, 0.756863 )
show_behind_parent = true
material = SubResource( 20 )
scale = Vector2( 0.1, 0.1 )
emitting = false
amount = 600
lifetime = 1.1
one_shot = true
speed_scale = 2.0
explosiveness = 0.8
local_coords = false
process_material = SubResource( 27 )
__meta__ = {
"_editor_description_": ""
}

[node name="Particles2D4" type="Particles2D" parent="Shield/ShieldExplosion"]
self_modulate = Color( 0.741176, 0.741176, 0.741176, 0.85098 )
show_behind_parent = true
material = SubResource( 28 )
scale = Vector2( 0.1, 0.1 )
emitting = false
amount = 600
lifetime = 1.1
one_shot = true
speed_scale = 2.0
explosiveness = 0.8
local_coords = false
process_material = SubResource( 29 )
__meta__ = {
"_editor_description_": ""
}

[node name="ShieldDelay" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="DeathParticles" parent="." instance=ExtResource( 25 )]
z_index = -1

[node name="Extase" parent="." instance=ExtResource( 26 )]
z_index = -1
amount = 300
lifetime = 0.4

[node name="AirTime" type="Timer" parent="Extase"]
wait_time = 0.4
one_shot = true
__meta__ = {
"_editor_description_": "Timer responsável pela duração de tempo no ar ao ativar o escudo"
}

[node name="CooldownShoot" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureProgress" type="TextureProgress" parent="CanvasLayer"]
margin_left = 108.0
margin_top = 52.0
margin_right = 124.0
margin_bottom = 68.0
max_value = 4.0
step = 0.0
texture_under = ExtResource( 35 )
texture_over = ExtResource( 33 )
texture_progress = ExtResource( 34 )
tint_under = Color( 0.266667, 0.992157, 0.992157, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Vidas" type="Node2D" parent="."]
position = Vector2( -6.5, -9.5 )

[node name="Sprite" type="Sprite" parent="Vidas"]
position = Vector2( 3, 3 )
texture = ExtResource( 36 )

[node name="Sprite2" type="Sprite" parent="Vidas"]
position = Vector2( 7, 3 )
texture = ExtResource( 36 )

[node name="Sprite3" type="Sprite" parent="Vidas"]
position = Vector2( 11, 3 )
texture = ExtResource( 36 )

[node name="RaycastsGround" type="Node2D" parent="."]
position = Vector2( 0, 5 )

[node name="RayCast2D1" type="RayCast2D" parent="RaycastsGround"]
enabled = true
cast_to = Vector2( 0, 1 )

[node name="RayCast2D2" type="RayCast2D" parent="RaycastsGround"]
position = Vector2( -2.85, 0 )
enabled = true
cast_to = Vector2( 0, 1 )

[node name="RayCast2D3" type="RayCast2D" parent="RaycastsGround"]
position = Vector2( 2.85, 0 )
enabled = true
cast_to = Vector2( 0, 1 )

[node name="UncontrolTime" type="Timer" parent="."]
wait_time = 0.3
one_shot = true
[connection signal="timeout" from="Shield/RegenShield" to="." method="_on_RegenShield_timeout"]
[connection signal="timeout" from="ShieldDelay" to="." method="_on_ShieldDelay_timeout"]
[connection signal="timeout" from="Extase/AirTime" to="." method="_on_AirTime_timeout"]
[connection signal="timeout" from="CooldownShoot" to="." method="_on_CooldownShoot_timeout"]
[connection signal="timeout" from="UncontrolTime" to="." method="_on_UncontrolTime_timeout"]
